# Nominatim

./: .gitignore  Makefile.am  README.md  configure.ac
lib/: Geocode.php  Searches.php  init.php  lib.php  log.php
lib-php/: SearchDescription.php
modules/transliterate/plain/: .gitignore  Makefile.in  compute_words.sql  functions.sql  indices.sql  tables.sql  tokenizer.php
settings/: settings.php
sql/: functions.sql  indices.src.sql  tables.sql
utils/: setup.php  specialphrases.php  update.php
